# web_app

./: Application.cpp  ButtonHandler.h  CMakeLists.txt  RequestHandler.h  Server.cpp  Server.h  setup_lighttpd.txt
html/: index.html
html/static/css/: style.css
html/static/js/: functions.js
